<resources>
    <string name="app_name">SNAPPREFS</string>
    <string name="pref_general_title">General Settings</string>
    <string name="pref_received_title">Received Snaps</string>
    <string name="pref_sent_title">Sent Snaps</string>
    <string name="pref_colour_title">Colour Settings</string>
    <string name="pref_debug_title">INFORMATION</string>
    <string name="pref_thanks_title">Thanks to</string>
    <string name="pref_thanks_summary">stirante, Mr. Yawnie, andrerm124, m1kep, P1ngu1n, manvir, elesbb, chiralcode, Yoganandh, bnalls33, cketti, ddmanfire, MikeOrtiz, sangmingming</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">Support me by buying some coffee using PayPal. Donations are highly appreciated.</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_support_summary">Opens the XDA thread of the module, please search through the replies first.</string>
    <string name="hidebf_text">Hide Best-Friends</string>
    <string name="hidebf_summary">Hides your Best-Friends from you</string>
    <string name="auto_advance_title">Disable Auto-Advance</string>
    <string name="auto_advance_summary">Disables the story Auto-Advance function</string>
    <string name="select_text">Select-All</string>
    <string name="select_text_summary">Enables the Select-All functionality for sending snaps</string>
    <string name="selectstory_text">Including My Story</string>
    <string name="selectstory_text_summary">Includes My Story to the Select-All function</string>
    <string name="debug_text">Debug mode</string>
    <string name="version_text">Version</string>
    <string name="version_summary" translatable="false">Current version is: v2.0.0</string>
    <string name="general">General settings</string>
    <string name="saving">Saving settings</string>
    <string name="sharing">Sharing settings</string>
    <string name="spoofing">Spoofing settings</string>
    <string name="pref_speed_title">Speed Spoofing</string>
    <string name="pref_speed_summary_on">Speed spoofing is enabled</string>
    <string name="pref_speed_summary_off">Speed spoofing is disabled</string>
    <string name="pref_sticker">Custom sticker</string>
    <string name="pref_sticker_title">Enable Custom Stickers</string>
    <string name="pref_sticker_summary_on">Custom stickers will be loaded</string>
    <string name="pref_sticker_summary_off">Custom stickers will NOT be loaded</string>
    <string name="pref_sticker_readme_title">HOW TO USE</string>
    <string name="pref_sticker_readme_summary">To replace stickers, you have to first get SC\'s Emoji zips (can be found in their apk\'s assets folder), the PNG folder stores the previews of the stickers, the SVG folder contains the actual stickers. Each filename represents the unicode code of the Emoji, which they represent. To change the sticker, you have to replace the desired PNG and SVG in their zip, then place the zips in the /SDCARD/Snapprefs/Stickers/ folder (create them). Click here for a tutorial.</string>
    <string name="pref_sticker_readme_summary2">Example SVGs/PNGs can be found at https://github.com/Ranks/emojione</string>
    <string name="pref_filter_readme_title">HOW TO USE</string>
    <string name="pref_filter_readme_summary">Your custom filter has to be named as "banner_filter.png"/"fullscreen_filter.png" in the folder which is by default /sdcard/Snapprefs/Filters. If you changed the filter image, you have to restart Snapchat for the changes to take effect.\nResolution for Fullscreen Filters: 1080x1920\nResolution for Banner Filters: 821x323</string>
    <string name="pref_discover_readme_title">Something To Note</string>
    <string name="pref_weather_summary_off">Weather will NOT be spoofed</string>
    <string name="pref_weather_summary_on">Weather will be spoofed</string>
    <string name="pref_weather_title">Weather Spoofing</string>
    <string name="pref_location_summary_off">Location will NOT be spoofed</string>
    <string name="pref_location_summary_on">Location will be spoofed</string>
    <string name="pref_location_title">Location Spoofing</string>
    <string name="pref_location_location_picker_title">HOW TO USE</string>
    <string name="pref_location_location_picker_summary">Upon opening the map from SC, LONG click on the desired location, preferably to the middle of the city to set the spoofed location.</string>
    <string name="pref_discover_summary_off">Discover will load and download</string>
    <string name="pref_discover_summary_on">Discover will NOT load NOR download</string>
    <string name="pref_discover_title">Block Discover Snaps</string>
    <string name="pref_discover_ui_summary_off">Discover will show in the UI</string>
    <string name="pref_discover_ui_summary_on">Discover will NOT show in the UI</string>
    <string name="pref_discover_ui_title">Block Discover From The UI</string>
    <string name="pref_discover_readme_summary">Previously downloaded/cached Discovers before enabling this feature will load. Also, the second option saves like 5kB more data, since it block brand logos from downloading.</string>
    <string name="datasaving">Datasaving settings</string>
    <string name="pref_overlay_summary_off">Video overlays will NOT be saved</string>
    <string name="pref_overlay_summary_on">Video overlays will be saved</string>
    <string name="pref_overlay_title">Save video overlays</string>
    <string name="pref_category_snapchats">Saving</string>
    <string name="pref_save_snapchats_default" translatable="false">0</string>
    <string name="pref_save_snaps_images">Image snaps</string>
    <string name="pref_save_snaps_videos">Video snaps</string>
    <string name="pref_save_stories_images">Image stories</string>
    <string name="pref_save_stories_videos">Video stories</string>
    <string name="pref_timer_title">Timer</string>
    <string name="pref_category_viewing">Feedback</string>
    <string name="pref_timer_hide_title">Hide the Snap Timer</string>
    <string name="pref_timer_hide_summary_off">It will NOT hide the timer while watching a snap</string>
    <string name="pref_timer_hide_summary_on">It will hide the timer while watching a snap</string>
    <string name="pref_timer_story_hide_title">Hide the Story Timer</string>
    <string name="pref_timer_story_hide_summary_off">It will NOT hide the timer while watching a story</string>
    <string name="pref_timer_story_hide_summary_on">It will hide the timer while watching a story</string>
    <string name="pref_timer_unlimited_title">Unlimited Viewing Time</string>
    <string name="pref_timer_unlimited_summary_off">You will have limited viewing time, select below</string>
    <string name="pref_timer_unlimited_summary_on">You can watch the snap as long as you want</string>
    <string name="pref_timer_minimum_title">Minimum Timer Duration</string>
    <string name="pref_timer_minimum_default_value" translatable="false">0</string>
    <string name="pref_video_looping_title">Looping Videos</string>
    <string name="pref_video_looping_summary_off">Videos will play once</string>
    <string name="pref_video_looping_summary_on">Videos will be looped for as long as you want</string>
    <string name="pref_custom_filter_cb_title">Enable Custom Filters</string>
    <string name="pref_custom_filter_cb_summary_on">Select a custom filter below</string>
    <string name="pref_custom_filter_cb_summary_off">Custom filters are disabled</string>
    <string name="pref_custom_filter_title">Choose custom filter</string>
    <string name="pref_filter_group_summary">Here you can download custom filters to have</string>
    <string name="pref_filter_group_title">Open the Google+ group for filters</string>
    <string name="pref_filter_title">Custom filter</string>
    <string name="pref_filter_type_title">Choose filter type</string>
    <string name="pref_filter_default_value" translatable="false">0</string>
    <string name="pref_toasts_title">Show Toast Messages</string>
    <string name="pref_toasts_summary_on">Toast messages are enabled</string>
    <string name="pref_toasts_summary_off">Toast messages are disabled</string>
    <string name="pref_toasts_duration_title">Toast Duration</string>
    <string name="pref_toasts_duration_default_value" translatable="false">0</string>
    <string name="pref_category_folder">Folder</string>
    <string name="pref_hide_location_title">Hide a Folder</string>
    <string name="pref_save_location_title">Saving Location</string>
    <string name="pref_sort_files_mode_title">Sort Files by Category</string>
    <string name="pref_sort_files_mode_summary_on">Snaps and Stories will be saved into different folders</string>
    <string name="pref_sort_files_mode_summary_off">Snaps and Stories will be saved into the same folder</string>
    <string name="pref_sort_files_username_title">Sort Files by Sender</string>
    <string name="pref_sort_files_username_summary_on">Files will be saved in a subfolder for each sender</string>
    <string name="pref_sort_files_username_summary_off">Files will be saved into the same folder for each sender</string>
    <string name="pref_media">Media</string>
    <string name="pref_rotation_title">Rotation Mode</string>
    <string name="pref_rotation_default" translatable="false">0</string>
    <string name="pref_adjustment_title">Image Adjustment Method</string>
    <string name="pref_adjustment_default" translatable="false">2</string>
    <string name="pref_caption">Unlimited Captions</string>
    <string name="pref_caption_explanation">Note: Unlimited captions works for BOTH snaps taken with Snapchat\'s camera and snaps shared from the Gallery, so it\'s NOT limited to shared snaps.</string>
    <string name="pref_caption_unlimited_vanilla_title">Unlimited Regular Captions</string>
    <string name="pref_caption_unlimited_vanilla_on">Regular captions are unlimited</string>
    <string name="pref_caption_unlimited_vanilla_off">Regular captions are only one line</string>
    <string name="pref_caption_unlimited_fat_title">Unlimited Fat Captions</string>
    <string name="pref_caption_unlimited_fat_on">Fat captions are unlimited</string>
    <string name="pref_caption_unlimited_fat_off">Fat captions are 33 characters maximum</string>
    <string name="text" translatable="false">Caption settings</string>
    <string name="pref_support_faq" translatable="false">FAQ</string>
    <string name="support" translatable="false">Support</string>
    <string name="pref_support_faq_summary" translatable="false">Opens the XDA post containing the Frequently Asked Questions with answers.</string>
    <string name="pref_viewed_summary_off">Stealth viewing will NOT be executed</string>
    <string name="pref_viewed_summary_on">Stealth viewing will be executed</string>
    <string name="pref_viewed_title">Stealth Viewing</string>
    <string name="pref_viewed_readme_summary">When using Stealth Viewing you may sometimes receive \"ghost snaps\" whereby old snaps display again, this is normal and is due to the way we handle the stealth viewing</string>
    <string name="pref_stealth_chat_saving_summary_off">Stealth chat saving will NOT be executed</string>
    <string name="pref_stealth_chat_saving_summary_on">Stealth chat saving will be executed</string>
    <string name="pref_stealth_chat_saving_title">Stealth Chat Saving</string>
    <string name="pref_stealth_saving_button_summary_off">Stealth saving button will NOT be used</string>
    <string name="pref_stealth_saving_button_summary_on">Stealth saving button will be used</string>
    <string name="pref_stealth_saving_button_title">Stealth Saving Button</string>
    <string name="pref_stealth_notification_summary_off">Stealth notifications will NOT be used</string>
    <string name="pref_stealth_notification_summary_on">Stealth notifications will be used</string>
    <string name="pref_stealth_notification_title">Stealth Notifications</string>
</resources>