<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="button_general_settings"
        android:persistent="false"
        android:title="@string/general">
        <PreferenceCategory
            android:key="pref_key_general"
            android:title="@string/pref_general_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_hidebf"
                android:summary="@string/hidebf_summary"
                android:title="@string/hidebf_text" />
            <!--    <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_hiderecent"
                    android:summary="@string/hiderecent_summary"
                    android:title="@string/hiderecent_text" />-->
        </PreferenceCategory>
        <PreferenceCategory
            android:key="pref_key_timer"
            android:title="@string/pref_timer_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_timer_hide"
                android:summaryOff="@string/pref_timer_hide_summary_off"
                android:summaryOn="@string/pref_timer_hide_summary_on"
                android:title="@string/pref_timer_hide_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:disableDependentsState="true"
                android:key="pref_key_timer_unlimited"
                android:summaryOff="@string/pref_timer_unlimited_summary_off"
                android:summaryOn="@string/pref_timer_unlimited_summary_on"
                android:title="@string/pref_timer_unlimited_title" />
            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_timer_minimum_default_value"
                android:dependency="pref_key_timer_unlimited"
                android:entries="@array/pref_timer_minimum_entries"
                android:entryValues="@array/pref_timer_minimum_values"
                android:key="pref_key_timer_minimum"
                android:title="@string/pref_timer_minimum_title" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="pref_key_sent"
            android:title="@string/pref_sent_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_selectall"
                android:summary="@string/select_text_summary"
                android:title="@string/select_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_selectstory"
                android:summary="@string/selectstory_text_summary"
                android:title="@string/selectstory_text" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="pref_sticker"
            android:title="@string/pref_sticker">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_sticker"
                android:summaryOff="@string/pref_sticker_summary_off"
                android:summaryOn="@string/pref_sticker_summary_on"
                android:title="@string/pref_sticker_title" />
            <Preference
                android:key="pref_sticker_readme"
                android:summary="@string/pref_sticker_readme_summary"
                android:title="@string/pref_sticker_readme_title">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://forum.xda-developers.com/showpost.php?p=62707280&amp;postcount=4411" />
            </Preference>
            <Preference
                android:key="pref_key_sticker_readme_2"
                android:summary="@string/pref_sticker_readme_summary2">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/Ranks/emojione" />
            </Preference>
        </PreferenceCategory>
        <PreferenceCategory
            android:key="pref_key_filter"
            android:title="@string/pref_filter_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_custom_filter_checkbox"
                android:summaryOff="@string/pref_custom_filter_cb_summary_off"
                android:summaryOn="@string/pref_custom_filter_cb_summary_on"
                android:title="@string/pref_custom_filter_cb_title" />
            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_filter_default_value"
                android:entries="@array/pref_filter_entries"
                android:entryValues="@array/pref_filter_values"
                android:key="pref_key_filter_type"
                android:title="@string/pref_filter_type_title" />
            <Preference
                android:defaultValue="-1"
                android:key="pref_key_filter_location"
                android:persistent="true"
                android:title="@string/pref_custom_filter_title" />
            <Preference
                android:key="pref_filter_readme"
                android:summary="@string/pref_filter_readme_summary"
                android:title="@string/pref_filter_readme_title" />
            <Preference
                android:key="pref_filter_group"
                android:summary="@string/pref_filter_group_summary"
                android:title="@string/pref_filter_group_title">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://plus.google.com/communities/111884042638955665569" />
            </Preference>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_text_settings"
        android:persistent="false"
        android:title="@string/text">
        <PreferenceCategory
            android:key="pref_key_colour"
            android:title="@string/pref_colour_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_rainbow"
                android:summary="@string/rainbow_text_summary"
                android:title="@string/rainbow_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_txtcolour"
                android:title="@string/txtcolour_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_txtstyle"
                android:summary="@string/txtstyle_text_summary"
                android:title="@string/txtstyle_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_txtgravity"
                android:summary="@string/txtgravity_text_summary"
                android:title="@string/txtgravity_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_bgcolour"
                android:title="@string/bgcolour_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_bg_transparency"
                android:title="@string/bg_transparency_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_size"
                android:title="@string/size_text" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_transparency"
                android:title="@string/transparency_text" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_caption">
            <Preference
                android:key="pref_caption_explanation"
                android:summary="@string/pref_caption_explanation" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_caption_unlimited_vanilla"
                android:summaryOff="@string/pref_caption_unlimited_vanilla_off"
                android:summaryOn="@string/pref_caption_unlimited_vanilla_on"
                android:title="@string/pref_caption_unlimited_vanilla_title" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_caption_unlimited_fat"
                android:summaryOff="@string/pref_caption_unlimited_fat_off"
                android:summaryOn="@string/pref_caption_unlimited_fat_on"
                android:title="@string/pref_caption_unlimited_fat_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_saving_settings"
        android:persistent="false"
        android:title="@string/saving">
        <PreferenceCategory android:title="@string/pref_category_snapchats">
            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_save_snapchats_default"
                android:dialogTitle="@string/pref_save_snaps_images"
                android:entries="@array/pref_save_mode_entries"
                android:entryValues="@array/pref_save_mode_values"
                android:key="pref_key_snaps_images"
                android:title="@string/pref_save_snaps_images" />

            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_save_snapchats_default"
                android:dialogTitle="@string/pref_save_snaps_videos"
                android:entries="@array/pref_save_mode_entries"
                android:entryValues="@array/pref_save_mode_values"
                android:key="pref_key_snaps_videos"
                android:title="@string/pref_save_snaps_videos" />

            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_save_snapchats_default"
                android:dialogTitle="@string/pref_save_stories_images"
                android:entries="@array/pref_save_mode_entries"
                android:entryValues="@array/pref_save_mode_values"
                android:key="pref_key_stories_images"
                android:title="@string/pref_save_stories_images" />

            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_save_snapchats_default"
                android:dialogTitle="@string/pref_save_stories_videos"
                android:entries="@array/pref_save_mode_entries"
                android:entryValues="@array/pref_save_mode_values"
                android:key="pref_key_stories_videos"
                android:title="@string/pref_save_stories_videos" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_overlay"
                android:summaryOff="@string/pref_overlay_summary_off"
                android:summaryOn="@string/pref_overlay_summary_on"
                android:title="@string/pref_overlay_title" />
            <!--<CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_save_sent_snaps"
                android:summaryOff="@string/pref_save_sent_snaps_summary_off"
                android:summaryOn="@string/pref_save_sent_snaps_summary_on"
                android:title="@string/pref_save_sent_snaps_title" /> -->
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_category_viewing">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_key_toasts_checkbox"
                android:summaryOff="@string/pref_toasts_summary_off"
                android:summaryOn="@string/pref_toasts_summary_on"
                android:title="@string/pref_toasts_title" />

            <com.marz.snapprefs.BetterListPreference
                android:defaultValue="@string/pref_toasts_duration_default_value"
                android:dependency="pref_key_toasts_checkbox"
                android:entries="@array/pref_toasts_duration_entries"
                android:entryValues="@array/pref_toasts_duration_values"
                android:key="pref_key_toasts_duration"
                android:title="@string/pref_toasts_duration_title" />
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_category_folder">
            <Preference
                android:defaultValue="-1"
                android:key="pref_key_hide_location"
                android:persistent="true"
                android:title="@string/pref_hide_location_title" />
            <Preference
                android:defaultValue="-1"
                android:key="pref_key_save_location"
                android:persistent="true"
                android:title="@string/pref_save_location_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_key_sort_files_mode"
                android:summaryOff="@string/pref_sort_files_mode_summary_off"
                android:summaryOn="@string/pref_sort_files_mode_summary_on"
                android:title="@string/pref_sort_files_mode_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_key_sort_files_username"
                android:summaryOff="@string/pref_sort_files_username_summary_off"
                android:summaryOn="@string/pref_sort_files_username_summary_on"
                android:title="@string/pref_sort_files_username_title" />

        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_sharing_settings"
        android:persistent="false"
        android:title="@string/sharing">
        <PreferenceCategory android:title="@string/pref_media">
            <ListPreference
                android:defaultValue="@string/pref_rotation_default"
                android:dialogTitle="@string/pref_rotation_title"
                android:entries="@array/pref_rotation_entries"
                android:entryValues="@array/pref_rotation_values"
                android:key="pref_rotation"
                android:title="@string/pref_rotation_title" />

            <ListPreference
                android:defaultValue="@string/pref_adjustment_default"
                android:dialogTitle="@string/pref_adjustment_title"
                android:entries="@array/pref_adjustment_entries"
                android:entryValues="@array/pref_adjustment_values"
                android:key="pref_adjustment"
                android:title="@string/pref_adjustment_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_spoofing_settings"
        android:persistent="false"
        android:title="@string/spoofing">
        <PreferenceCategory android:title="@string/pref_speed_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_speed"
                android:summaryOff="@string/pref_speed_summary_off"
                android:summaryOn="@string/pref_speed_summary_on"
                android:title="@string/pref_speed_title" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_location_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_location"
                android:summaryOff="@string/pref_location_summary_off"
                android:summaryOn="@string/pref_location_summary_on"
                android:title="@string/pref_location_title" />
            <Preference
                android:key="pref_key_location_picker"
                android:summary="@string/pref_location_location_picker_summary"
                android:title="@string/pref_location_location_picker_title" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_weather_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_weather"
                android:summaryOff="@string/pref_weather_summary_off"
                android:summaryOn="@string/pref_weather_summary_on"
                android:title="@string/pref_weather_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="button_datasaving_settings"
        android:persistent="false"
        android:title="@string/datasaving">
        <PreferenceCategory android:title="@string/datasaving">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_discover"
                android:summaryOff="@string/pref_discover_summary_off"
                android:summaryOn="@string/pref_discover_summary_on"
                android:title="@string/pref_discover_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_discover_ui"
                android:summaryOff="@string/pref_discover_ui_summary_off"
                android:summaryOn="@string/pref_discover_ui_summary_on"
                android:title="@string/pref_discover_ui_title" />
            <Preference
                android:key="pref_discover_readme"
                android:summary="@string/pref_discover_readme_summary"
                android:title="@string/pref_discover_readme_title" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceCategory
        android:key="pref_key_debug"
        android:title="@string/pref_debug_title">
        <PreferenceScreen
            android:key="button_support_settings"
            android:persistent="false"
            android:title="@string/support">
            <Preference
                android:key="pref_support"
                android:summary="@string/pref_support_summary"
                android:title="@string/pref_support_title">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://forum.xda-developers.com/showthread.php?t=2947254" />
            </Preference>
            <Preference
                android:key="pref_support_faq"
                android:summary="@string/pref_support_faq_summary"
                android:title="@string/pref_support_faq">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://forum.xda-developers.com/showpostphp?p=56908686&amp;postcount=2" />
            </Preference>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_key_debug"
                android:title="@string/debug_text" />
            <Preference
                android:defaultValue="false"
                android:enabled="false"
                android:key="pref_key_version"
                android:summary="@string/version_summary"
                android:title="@string/version_text" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>