<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_discover"
        android:summaryOff="@string/pref_discover_summary_off"
        android:summaryOn="@string/pref_discover_summary_on"
        android:title="@string/pref_discover_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_discover_ui"
        android:summaryOff="@string/pref_discover_ui_summary_off"
        android:summaryOn="@string/pref_discover_ui_summary_on"
        android:title="@string/pref_discover_ui_title" />
    <Preference
        android:key="pref_discover_readme"
        android:summary="@string/pref_discover_readme_summary"
        android:title="@string/pref_discover_readme_title" />
</PreferenceScreen>